--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ disqus_shortname  : ""
 postshare_enabled : false
 
 # Build settings
-permalink   : /:year/:title/
+permalink   : /:categories/:year/:title/
 markdown    : kramdown
 highlighter : rouge
 
